--- a/formstyle.css
+++ b/formstyle.css
@@ -4,49 +4,44 @@
 }
 body {
   font-size: 120%;
-  background-image: url("massage.img.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
+  background: white;
 }
 
 .header {
-  width: 80%;
+  width: 30%;
   margin: 50px auto 0px;
   color: white;
-  background: green;
+  background: blue;
   text-align: center;
-  word-spacing: 20px;
-  font-size: 40px;
   border: 3px solid blue;
   border-bottom: none;
   border-radius: 10px 10px 0px 0px;
   padding: 20px;
 }
 form, .content {
-  width: 80%;
+  width: 30%;
   margin: 0px auto;
-  text-align: center;
-  font-size: 40px;
   padding: 20px;
   border: 3px solid blue;
   border-top: none;
   background: white;
   border-radius: 0px 0px 10px 10px;
 }
-
-
-.table {
-  display: inline-inline-grid;
-  width: 80%;
-  text-align: center;
-  margin: 0px auto;
-  padding: 20px;
-  border-top: none;
-  margin: 0 auto;
-  z-index: 1;
-  width: 50%;
-  height: 50px;
-  background: white;
+.input-group {
+  margin: 10px 0px 10px 0px;
+}
+.input-group label {
+  display: block;
+  text-align: left;
+  margin: 3px;
+}
+.input-group input {
+  height: 30px;
+  width: 93%;
+  padding: 5px 10px;
+  font-size: 16px;
+  border-radius: 5px;
+  border: 1px solid gray;
 }
 
 .btn {
