--- a/style.css
+++ b/style.css
@@ -4,45 +4,59 @@
 }
 body {
   font-size: 120%;
-  background: white;
-
+  background-image: url("career.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .header {
-  width: 30%;
+  width: 80%;
   margin: 50px auto 0px;
   color: white;
-  background: blue;
+  background: red;
   text-align: center;
+  word-spacing: 20px;
+  font-size: 40px;
   border: 3px solid blue;
   border-bottom: none;
   border-radius: 10px 10px 0px 0px;
   padding: 20px;
 }
 form, .content {
-  width: 30%;
+  width: 80%;
   margin: 0px auto;
+  text-align: center;
+  font-size: 30px;
   padding: 20px;
   border: 3px solid blue;
   border-top: none;
   background: white;
   border-radius: 0px 0px 10px 10px;
 }
-.input-group {
-  margin: 10px 0px 10px 0px;
+form, .sectiontitle {
+	width: 20%;
+  margin: 0px auto;
+  text-align: center;
+  font-size: 15px;
+  padding: 20px;
+  border: 3px solid blue;
+ 
+  background: white;
+  border-radius: 0px 0px 5px 5px;
 }
-.input-group label {
-  display: block;
-  text-align: left;
-  margin: 3px;
-}
-.input-group input {
-  height: 30px;
-  width: 93%;
-  padding: 5px 10px;
-  font-size: 16px;
-  border-radius: 5px;
-  border: 1px solid gray;
+
+
+.table {
+  display: inline-inline-grid;
+  width: 60%;
+  text-align: center;
+  margin: 0px auto;
+  padding: 30px;
+  border-top: none;
+  margin: 0 auto;
+  z-index: 1;
+  width: 30%;
+  background: white;
 }
 
 .btn {
